# pc-interactor-bot

./: CMakeLists.txt  LICENSE  README.md  config.json
include/Bot/: TelegramBot.h
include/Commands/: CameraCommand.h  CommandDispatcher.h  CommandList.h  CommandRegistry.h  FindCommand.h  HelpCommand.h  HibernateCommand.h  ICallbackCommand.h  ICommand.h  KillCommand.h  LockCommand.h  MediaNextCommand.h  MediaPrevCommand.h  MediaToggleCommand.h  MonitorCommand.h  ProcessesCommand.h  RunCommand.h  SayCommand.h  ScreenshotCommand.h  ShutdownCommand.h  ShutdownPCCommand.h  SleepCommand.h  StartCommand.h  SystemInfoCommand.h  VolumeCommand.h
include/Core/: AppManager.h  Config.h  Logger.h  PrivilegeHelper.h  SystemController.h
include/Telegram/: TelegramApi.h
include/Telegram/Models/: CallbackQuery.h  InlineKeyboardButton.h  InlineKeyboardMarkup.h  Message.h  Update.h  User.h
include/Utils/: Convert.h  String.h
src/: main.cpp
src/Bot/: CMakeLists.txt  TelegramBot.cpp
src/Commands/: CMakeLists.txt  CameraCommand.cpp  CommandDispatcher.cpp  CommandRegistry.cpp  FindCommand.cpp  HelpCommand.cpp  HibernateCommand.cpp  KillCommand.cpp  LockCommand.cpp  MediaNextCommand.cpp  MediaPrevCommand.cpp  MediaToggleCommand.cpp  MonitorCommand.cpp  ProcessesCommand.cpp  RunCommand.cpp  SayCommand.cpp  ScreenshotCommand.cpp  ShutdownCommand.cpp  ShutdownPCCommand.cpp  SleepCommand.cpp  StartCommand.cpp  SystemInfoCommand.cpp  VolumeCommand.cpp
src/Core/: AppManager.cpp  CMakeLists.txt  Config.cpp  Logger.cpp  PrivilegeHelper.cpp  SystemController.cpp
src/Telegram/: CMakeLists.txt  TelegramApi.cpp
